--- a/Proj1/Android/Reflow/res/values/strings.xml
+++ b/Proj1/Android/Reflow/res/values/strings.xml
@@ -10,4 +10,5 @@
 	<string name="toggle_on">Emergency Stop</string>
 	<string name="toggle_off">Start Reflow Process</string>
 	<string name="viewGraph">View Graph</string>
+	<string name="currentState">Current State</string>
 </resources>
