--- a/Proj1/Android/Reflow/res/values/strings.xml
+++ b/Proj1/Android/Reflow/res/values/strings.xml
@@ -14,7 +14,11 @@
     <string name="refresh">Refresh</string>
     <string name="default_soak_temp">150</string>
     <string name="default_soak_time">120</string>
-    <string name="default_reflow_temp">235</string>
+    <string name="default_max_temp">235</string>
     <string name="local_service_connected">Connected to service</string> 
 	<string name="local_service_disconnected">Disconnected from service</string> 
+	<string name="reflow_temp">Reflow Temp in Celsius</string> 
+	<string name="reflow_time">Reflow Time in Seconds</string> 
+	<string name="default_reflow_time">40</string> 
+	<string name="default_reflow_temp">217</string> 
 </resources>
